# hext

./: .travis.yml  CMakeLists.txt  README.md
libhext/: CMakeLists.txt
libhext/bindings/: hext.i
libhext/bindings/nodejs/: CMakeLists.txt  README.md  htmlext.js  package.json
libhext/bindings/nodejs/cmake/: FindNodeAddonApi.cmake
libhext/bindings/nodejs/src/: Hextjs.cpp  Html.cpp  Html.h  Rule.cpp  Rule.h
libhext/bindings/nodejs/test/: blackbox.js.sh
libhext/bindings/php/: CMakeLists.txt  README.md  htmlext.php  phphext.i
libhext/bindings/python/: CMakeLists.txt  README.md  htmlext.py  pyhext.i
libhext/bindings/python/pytest/: test_hext.py
libhext/bindings/python/test/: blackbox.py.sh
libhext/bindings/ruby/: CMakeLists.txt  README.md  htmlext.rb  rbhext.i
libhext/bindings/wrapper/: Rule.cpp  Rule.h
libhext/cmake/: Config.cmake.in  HextConfig.cmake
libhext/doc/: doxyfile  mainpage.html
libhext/doc/doxygen/: doxyfile  mainpage.html
libhext/doc/doxygen/resources/: header.html  style.css
libhext/doc/resources/: footer.html  header.html  style.css
libhext/examples/: CMakeLists.txt  chaining.cpp  extract-href.cpp  mixed.cpp
libhext/hext/: hext.h  option.h  parser.cpp.rl  result-tree.cpp  result-tree.h  rule-patterns.cpp  rule-patterns.h  rule.cpp  string-util.cpp
libhext/hext/pattern/: attribute-capture.cpp  attribute-capture.h  builtin-capture.h  capture-pattern.h  literal-test.h
libhext/include/hext/: AppendPipe.h  AttributeCapture.h  AttributeCountMatch.h  AttributeMatch.h  BeginsWithTest.h  BuiltinCapture.h  BuiltinMatch.h  Builtins.h  Capture.h  CaptureFunction.h  CasePipe.h  ChildCountMatch.h  Cloneable.h  CollapseWsPipe.h  ContainsTest.h  ContainsWordsTest.h  EndsWithTest.h  EqualsTest.h  Extractor.h  FunctionCapture.h  FunctionMatch.h  FunctionValueMatch.h  Hext.h  Html.h  HtmlTag.h  MakeUnique.h  Match.h  MatchContext.h  MatchFunction.h  MaxSearchError.h  NegateMatch.h  NegateTest.h  NodeUtil.h  NthChildMatch.h  OnlyChildMatch.h  Option.h  ParseHext.h  Parser.h  PatternBuilder.h  PatternValues.h  (+21 more)
libhext/include/hext/pattern/: AttributeCapture.h  AttributeCountMatch.h  AttributeMatch.h  BeginsWithTest.h  BuiltinCapture.h  BuiltinMatch.h  Capture.h  CapturePattern.h  ChildCountMatch.h  ContainsTest.h  ContainsWordTest.h  EmptyMatch.h  EndsWithTest.h  IsNotLiteralTest.h  IsNotRegexTest.h  LiteralTest.h  Match.h  MatchPattern.h  NegateMatch.h  NthChildMatch.h  OnlyChildMatch.h  RegexTest.h  TextNodeMatch.h  ValueMatch.h  ValueTest.h  attribute-match.h  match-pattern.h  regex-test.h
libhext/include/hext/test/: BeginsWith.h  Contains.h  ContainsAllWords.h  ContainsWord.h  ContainsWords.h  EndsWith.h  Equals.h  IsNotEqual.h  IsNotRegex.h  Negate.h  NegateValueTest.h  NotNull.h  Regex.h  True.h  ValueTest.h
libhext/ragel/: Parser.cpp.rl  Parser.h.rl  hext-machine.rl
libhext/scripts/: no-space-diff.sh  run-ragel.sh  run_ragel.sh
libhext/scripts/syntax-hl-ace/: readme.md
libhext/src/: AppendPipe.cpp  AttributeCapture.cpp  AttributeCountMatch.cpp  AttributeMatch.cpp  BeginsWithTest.cpp  BuiltinCapture.cpp  BuiltinMatch.cpp  Builtins.cpp  Capture.cpp  CasePipe.cpp  ChildCountMatch.cpp  ContainsTest.cpp  ContainsWordsTest.cpp  EndsWithTest.cpp  EqualsTest.cpp  Extractor.cpp  FunctionCapture.cpp  FunctionMatch.cpp  FunctionValueMatch.cpp  GCC7Diagnostics.h  Hext.cpp  Html.cpp  Match.cpp  MatchContext.cpp  MatchContext.h  NegateMatch.cpp  NegateTest.cpp  NodeUtil.cpp  NodeUtil.h  NthChildMatch.cpp  OnlyChildMatch.cpp  ParseHext.cpp  Parser.cpp  Parser.h  PatternBuilder.cpp  PatternValues.cpp  PatternValues.h  PrependPipe.cpp  RegexPipe.cpp  RegexReplacePipe.cpp  (+20 more)
libhext/src/pattern/: AttributeCapture.cpp  AttributeCountMatch.cpp  AttributeMatch.cpp  BeginsWithTest.cpp  BuiltinCapture.cpp  BuiltinMatch.cpp  CapturePattern.cpp  ChildCountMatch.cpp  ContainsTest.cpp  ContainsWordTest.cpp  EmptyMatch.cpp  EndsWithTest.cpp  IsNotLiteralTest.cpp  IsNotRegexTest.cpp  LiteralTest.cpp  MatchPattern.cpp  NegateMatch.cpp  NthChildMatch.cpp  OnlyChildMatch.cpp  RegexTest.cpp  TextNodeMatch.cpp  ValueMatch.cpp  ValueTest.cpp  regex-test.cpp  value-test.cpp
libhext/src/test/: BeginsWith.cpp  Contains.cpp  ContainsAllWords.cpp  ContainsWord.cpp  ContainsWords.cpp  EndsWith.cpp  Equals.cpp  IsNotEqual.cpp  IsNotRegex.cpp  Negate.cpp  NegateValueTest.cpp  NotNull.cpp  Regex.cpp  True.cpp  ValueTest.cpp
libhext/swig/: CMakeLists.txt  hext.i  hext_class_hext.i  hext_exception.i  hext_result.i  phphext.i  pyhext.i  rbhext.i  swig-html.cpp  swig-html.h  swig-rule.cpp  swig-rule.h
libhext/swig/examples/: test.py
libhext/test/: CMakeLists.txt
libhext/test/src/: main.cpp
libhext/test/src/builtins/: inner-html-builtin.cpp  (+5 more)
test/: CMakeLists.txt  blackbox.sh
test/bats/: htmlext.bats
test/case/: append-pipe.hext  array.hext  attribute-count.hext  attribute-operators.hext  chaining-rules-example.hext  contains-all-words.hext  custom-tag-case-insensitive.expected  custom-tag-case-insensitive.hext  custom-tag-case-insensitive.html  custom-tag-inner-html.expected  custom-tag-inner-html.hext  custom-tag-inner-html.html  custom-tag-parent.expected  custom-tag-parent.hext  custom-tag-parent.html  custom-tag.expected  custom-tag.hext  custom-tag.html  doxygen-annotated-class-list.hext  empty-literal-attrib.hext  empty-node.hext  escapes.hext  first-child.hext  icase-regex.hext  icase-regex.html  last-child.hext  manda-trailing-optional.hext  matched-but-no-capture.hext  multiple-nested-rules.expected  multiple-nested-rules.hext  multiple-nested-rules.html  negate-value.hext  nested-rule-direct-descendant.expected  nested-rule-direct-descendant.hext  nested-rule-direct-descendant.html  nested-rule-sibling.expected  nested-rule-sibling.hext  nested-rule-simple-example.expected  nested-rule-simple-example.hext  nested-rule-simple-example.html  (+27 more)
test/src/: main.cpp
test/src/builtins/: main.h
test/src/file/: main.h
test/src/match-tree/: main.h
test/src/node-util/: main.h
test/src/parser/: main.h
test/src/result-tree/: main.h
test/src/string-util/: main.h
(+325 files in other folders)
